--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -28,49 +28,18 @@ jobs:
         with:
           node-version: '20'
           
-      - name: Install Angular dependencies
-        run: npm ci --legacy-peer-deps
-        
-      - name: Install React MFE dependencies
-        run: cd react-mfe && npm ci --legacy-peer-deps
-        
-      - name: Build Angular app (production optimized)
-        run: npm run build -- --configuration production
-        
-      - name: Build React MFE
-        run: cd react-mfe && npm run build
-        
-      - name: Prepare optimized deployment folder
+      # Use the pre-committed deployment folder with tab-based interface
+      - name: Verify deployment folder
         run: |
-          # Create clean deployment directory
-          mkdir -p deployment
-          
-          # Copy only essential Angular files
-          if [ -d "dist/angular-spa-app/browser" ]; then
-            cp -r dist/angular-spa-app/browser/* deployment/
-          elif [ -d "dist/angular-spa-app" ]; then
-            cp -r dist/angular-spa-app/* deployment/
-          fi
-          
-          # Copy React MFE
-          mkdir -p deployment/react-mfe
-          cp react-mfe/dist/react-mfe.js deployment/react-mfe/
-          
-          # Copy essential static files
-          cp tabs-only.html deployment/ 2>/dev/null || true
-          cp index.html deployment/ 2>/dev/null || true
-          cp staticwebapp.config.json deployment/
-          
-          # Remove all source maps and unnecessary files
-          find deployment -name "*.map" -type f -delete
-          find deployment -name "*.txt" -type f -delete
-          find deployment -name "*.md" -type f -delete
-          find deployment -name "*.LICENSE.txt" -type f -delete
-          
-          # Show deployment size
-          echo "=== Deployment folder size ==="
+          echo "=== Using pre-committed deployment folder ==="
+          echo "Deployment folder contents:"
+          ls -la deployment/
+          echo ""
+          echo "React MFE contents:"
+          ls -la deployment/react-mfe/ || echo "React MFE folder not found"
+          echo ""
+          echo "Total deployment size:"
           du -sh deployment/
-          du -sh deployment/* | sort -h
         
       - name: Build And Deploy
         id: builddeploy
@@ -79,7 +48,7 @@ jobs:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_JOLLY_WAVE_0AC63D010 }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
-          app_location: "/deployment"  # Use the optimized deployment folder
+          app_location: "/deployment"  # Use the pre-committed deployment folder
           api_location: ""
           output_location: ""  # Already built, no output needed
           skip_app_build: true
