--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/node": "^20.0.0",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.4",
+    "puppeteer": "^24.16.2",
     "serve": "^14.2.1",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.5.2",
