--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -41,17 +41,19 @@ jobs:
           cd ..
           
           echo "Building Angular app..."
-          npm run build -- --configuration production
+          ng build --configuration production
           
           echo "Copying React MFE to Angular dist..."
           mkdir -p dist/angular-spa-app/react-mfe
           cp -r react-mfe/dist/* dist/angular-spa-app/react-mfe/
           
           echo "Copying staticwebapp.config.json..."
-          cp staticwebapp.config.json dist/angular-spa-app/ || echo "No staticwebapp.config.json found"
+          cp staticwebapp.config.json dist/angular-spa-app/
           
-          echo "Build complete!"
+          echo "Build complete! Contents:"
           ls -la dist/angular-spa-app/
+          echo "React MFE contents:"
+          ls -la dist/angular-spa-app/react-mfe/ || true
         
       - name: Build And Deploy
         id: builddeploy
@@ -75,5 +77,5 @@ jobs:
         id: closepullrequest
         uses: Azure/static-web-apps-deploy@v1
         with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_JOLLY_WAVE_0AC63D010 }}
           action: "close"
