Fix ng command not found - use npx ng build

--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -41,7 +41,7 @@ jobs:
           cd ..
           
           echo "Building Angular app..."
-          ng build --configuration production
+          npx ng build --configuration production
           
           echo "Copying React MFE to Angular dist..."
           mkdir -p dist/angular-spa-app/react-mfe
